consertados links mortos e separado /pt/

--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,7 @@ taxonomies: []
 
 # linguagem padrão do site
 defaultContentLanguage: pt
+defaultContentLanguageInSubdir: true
 languages:
   pt:
     languageName: Português
